@@ -2,6 +2,11 @@ This documents significant changes in the dev branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2025-03-28:
+
+- Fixed crash upon resizing the terminal window after 'stty -echo', including
+  when invoking ksh as a child shell in an editor such as emacs (M-x shell).
+
 2025-03-24:
 
 - Fixed a crash that occurred in specific circumstances when processing a
